@@ -1,35 +1,44 @@
 package model.powerUps;
 
-import java.util.ArrayList;
+import model.Color;
+import java.util.*;
 
 public class PowerUpsDeck {
-    private ArrayList<PowerUps> powerUpsDeck;
+    private LinkedList<PowerUps> powerUpsDeck;
 
     public PowerUpsDeck(){
 
-        powerUpsDeck.add(new PowerUps('B', "Granata Venom"));
-        powerUpsDeck.add(new PowerUps('R', "Granata Venom"));
-        powerUpsDeck.add(new PowerUps('Y', "Granata Venom"));
-        powerUpsDeck.add(new PowerUps('B', "Mirino"));
-        powerUpsDeck.add(new PowerUps('R', "Mirino"));
-        powerUpsDeck.add(new PowerUps('Y', "Mirino"));
-        powerUpsDeck.add(new PowerUps('B', "Raggio cinetico"));
-        powerUpsDeck.add(new PowerUps('R', "Raggio cinetico"));
-        powerUpsDeck.add(new PowerUps('Y', "Raggio cinetico"));
-        powerUpsDeck.add(new PowerUps('B', "Teletrasporto"));
-        powerUpsDeck.add(new PowerUps('R', "Teletrasporto"));
-        powerUpsDeck.add(new PowerUps('Y', "Teletrasporto"));
+        powerUpsDeck.add(new PowerUps(Color.BLUE, "TagBack Grenade"));
+        powerUpsDeck.add(new PowerUps(Color.RED, "TagBack Grenade"));
+        powerUpsDeck.add(new PowerUps(Color.YELLOW, "TagBack Grenade"));
+        powerUpsDeck.add(new PowerUps(Color.BLUE, "Targeting Scope"));
+        powerUpsDeck.add(new PowerUps(Color.RED, "Targeting Scope"));
+        powerUpsDeck.add(new PowerUps(Color.YELLOW, "Targeting Scope"));
+        powerUpsDeck.add(new PowerUps(Color.BLUE, "Newton"));
+        powerUpsDeck.add(new PowerUps(Color.RED, "Newton"));
+        powerUpsDeck.add(new PowerUps(Color.YELLOW, "Newton"));
+        powerUpsDeck.add(new PowerUps(Color.BLUE, "Teleporter"));
+        powerUpsDeck.add(new PowerUps(Color.RED, "Teleporter"));
+        powerUpsDeck.add(new PowerUps(Color.YELLOW, "Teleporter"));
 
+    }
+
+    public void shuffle(){
+        Collections.shuffle(powerUpsDeck);
     }
 
 
     public PowerUps removePowerUps(){
-         return powerUpsDeck.get(0);
-         //TODO come cancello la prima cella ?
+         PowerUps powerUpsTemp;
+         powerUpsTemp = powerUpsDeck.getFirst();
+         powerUpsDeck.removeFirst();
+         return powerUpsTemp;
+
 
     }
 
     public void addPowerUps(PowerUps powerUps){
-        powerUpsDeck.add(powerUpsDeck.size()-1,powerUps);
+        powerUpsDeck.addLast(powerUps);
     }
+
 }
